--- a/src/e_cidadania/apps/debate/templates/debate/debate_add_simple.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_add_simple.html
@@ -8,19 +8,118 @@
 {% block content %}
 
     {% block centercol %}
+    
+        <script src="{{ STATIC_URL }}/js/jquery.formset.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            $(function() {
+                $('#cols').formset({
+                    formCssClass: 'dynamic-col-form',
+                    prefix: 'colform'           
+                });
+                $('#rows').formset({
+                    formCssClass: 'dunamic-row-form',
+                    prefix: 'rowform'
+                });
+            })   
+        </script>
         <div class="grid_16">
-            {{ colform.management_form }}
-            {% for col in colform.forms %}     
-                {{ col.id }}
-                <div class="clearfix"> 
-                    {{ col.errors }}
-                    <label for="prependedInput">{{ col.criteria.label }}</label> 
-                    <div class="input">
-                        {{ col.criteria }}
-                        <span class="help-inline">{{ col.criteria.help_text }}</span>
+        
+            <form method="post" enctype="" action="">{% csrf_token %}
+                <div id="cols">
+                <h3>Columnas</h3>
+                {{ colform.management_form }}
+                {% for col in colform.forms %}     
+                    {{ col.id }}
+                    <div class="clearfix {% if col.errors %}error{% endif %}"> 
+                        {{ col.errors }}
+                        <label for="prependedInput">{{ col.criteria.label }}</label> 
+                        <div class="input">
+                            {{ col.criteria }}
+                            <span class="help-inline">{{ col.criteria.help_text }}</span>
+                        </div> 
+                    </div>
+                {% endfor %}
+                </div>
+            
+                <div id="rows">
+                <h3>Filas</h3>
+                {{ rowform.management_form }}
+                {% for row in rowform.forms %}
+                    <div class="clearfix {% if col.errors %}error{% endif %}"> 
+                        {{ row.errors }}
+                        <label for="prependedInput">{{ row.criteria.label }}</label> 
+                        <div class="input">
+                            {{ row.criteria }}
+                            <span class="help-inline">{{ row.criteria.help_text }}</span>
+                        </div> 
+                    </div>
+                {% endfor %}
+                </div>
+                
+                <hr />
+                <h1>{% trans "Other debate data" %}</h1><br/><br/>
+                
+                {% if form.non_field_errors %}
+                    {% for error in form.non_field_errors %}
+                        <span class="help-inline">{{ error|escape }}</span>
+                    {% endfor %}
+                {% endif %}
+
+               <div class="clearfix {% if form.title.errors %}error{% endif%}"> 
+                    <label for="prependedInput">{{ form.title.label }}</label> 
+                    <div class="input"> 
+                        {{ form.title }}
+                        <span class="help-inline">
+                            {% if form.title.errors %}
+                                {% for error in form.title.errors %}
+                                    {{ error|escape }}
+                                {% endfor %}
+                            {% else %}
+                                {{ form.title.help_text }}
+                            {% endif %}
+                        </span>
                     </div> 
                 </div>
-            {% endfor %}
+                
+                <div class="clearfix {% if form.scope.errors %}error{% endif%}"> 
+                    <label for="prependedInput">{{ form.scope.label }}</label> 
+                    <div class="input"> 
+                        {{ form.scope }}
+                        <span class="help-inline">
+                            {% if form.scope.errors %}
+                                {% for error in form.scope.errors %}
+                                    {{ error|escape }}
+                                {% endfor %}
+                            {% else %}
+                                {{ form.scope.help_text }}
+                            {% endif %}
+                        </span>
+                    </div> 
+                </div>
+                
+                <div class="clearfix {% if form.description.errors %}error{% endif%}"> 
+                    <label for="prependedInput">{{ form.description.label }}</label> 
+                    <div class="input"> 
+                        {{ form.description }}
+                        <span class="help-inline">
+                            {% if form.description.errors %}
+                                {% for error in form.description.errors %}
+                                    {{ error|escape }}
+                                {% endfor %}
+                            {% else %}
+                                {{ form.description.help_text }}
+                            {% endif %}
+                        </span>
+                    </div> 
+                </div>
+                
+                {{ form.columns.as_hidden }}
+                
+                <hr />
+
+                <input class="btn primary small" type="submit" value="{% trans 'Save' %}" />
+                <a href="{{ get_place.get_absolute_url }}" class="btn danger small">{% trans "Cancel" %}</a>
+            </form>    
         </div>
     {% endblock %}
 {% endblock %}
