--- a/src/e_cidadania/apps/debate/templates/debate/debate_view.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_view.html
@@ -36,7 +36,7 @@
                                     <td headers="{{ td.id }} {{ row.id }}" id="sortable-debate" class="connectedSortable">
                                         {% for note in notes %}
                                             {% if note.column.id == td.id and note.row.id == row.id %}
-                                                <div id="{{ note.noteid }}" class="note">
+                                                <div id="{{ note.id }}" class="note">
                                                     <a href="javascript:getClickedNote()" id="deletenote" class="hidden"></a>
                                                     <textarea>{{ note.message }}</textarea>
                                                 </div>
