Fix update_note AJAX and view. Minor fixes in admin and debate view template

--- a/src/e_cidadania/apps/debate/templates/debate/debate_view.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_view.html
@@ -38,7 +38,7 @@
                                             {% if note.column.id == td.id and note.row.id == row.id %}
                                                 <div id="{{ note.id }}" class="note">
                                                     <a href="javascript:getClickedNote()" id="deletenote" class="hidden"></a>
-                                                    <textarea>{{ note.message }}</textarea>
+                                                    <textarea id="text{{ note.id }}">{{ note.message }}</textarea>
                                                 </div>
                                             {% endif %}
                                         {% endfor %}
